# ksmm

./: .gitignore  LICENSE.md  NOTICE.md  README.md  patterns.in  pyproject.toml
results/: 1_ksmm_energy.csv
scripts/: 0_benchmark_ksmm_time.sh  1_benchmark_ksmm_energy.sh  2_benchmark_ksvit_time.sh  example.py
src/ksmm_cu/: Makefile  generate_best_from_fine_tuning.py  generate_best_from_fine_tuning.sh  long_run.py  long_run.sh  short_run.sh
src/ksmm_cu/src/: template_kernels_float4.cuh  template_kernels_fp8.cuh  template_kernels_half.cuh  template_kernels_half2.cuh  template_kernels_half8.cuh  template_sparse_mm.cu
src/ksmm_cu/tuning/: kernel_bs_last_float4.cuh  kernel_bs_last_half2.cuh
src/ksmm_py/benchmark/: ksmm_energy.py  ksmm_time.py  ksvit_time.py  utils.py
src/ksmm_py/layer/: get_linear_layer.py
src/ksmm_py/layer/bmm/: forward_bmm.py
src/ksmm_py/layer/kronecker_sparse/: interface.py  kernel.cpp  kernel.cu  kernel.py  kernel_bs_first_float.best  kernel_bs_first_float.cuh  kernel_bs_first_float4.cuh  kernel_bs_first_fp8e4m3.best  kernel_bs_first_half.cuh  kernel_bs_first_half2.cuh  kernel_bs_first_half4.cuh  kernel_bs_last_float.best  kernel_bs_last_float.cuh  kernel_bs_last_fp8e4m3.best  kernel_bs_last_half.cuh  template_kernels_float.cuh  template_kernels_float4.cuh  template_kernels_half2.cuh
src/ksmm_py/model/: get_vit.py  vit.py
